2016-05-13  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_exit): Don't call chx_release_irq_thread.
	(chx_release_irq_thread): Remove.
	(q_intr): New variable.
	(intr_top): Remove.
	(chx_handle_intr, chx_init, chopstx_claim_irq)
	(chopstx_intr_wait): Use Q_INTR.
	(chx_intr_hook): New.
	(chopstx_poll): Support CHOPSTX_POLL_INTR.
	(chopstx_release_irq): Remove.
	(chx_release_irq): New internal function.
	(THREAD_WAIT_INT): Remove.
	(chopstx_intr_wait): Rewrite by chopstx_poll.

2016-05-13  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_sched) [__ARM_ARCH_6M__]: Fix asm.
	(chx_handle_intr, chx_wakeup, chopstx_cancel): Fix for polling
	with no timeout.

	* example-cdc/sample.c (main): Update chopstx_poll example.
	* example-fs-bb48/sample.c (main): Ditto.

	* chopstx.c (struct chx_px): Add READY_P and LOCK.
	(chx_proxy_init): Add initialization of new members.
	(chx_wakeup): Spinlock PX.
	(chopstx_mutex_lock): Add protection by splinlock.
	(chx_cond_hook, chx_join_hook): Change arguments.
	(chx_cond_unhook, chx_join_unhook): Remove.
	(chopstx_claim_irq): Compatible to chx_poll.
	(chopstx_join): Fix spinlocking.
	(chopstx_cancel): Fix spinlocking.

2016-05-12  NIIBE Yutaka  <gniibe@fsij.org>

	* example-cdc/sample.c: Update using chopstx_poll.
	* example-cdc/sample.ld: Likewise.
	* example-cdc/stream.h: Likewise.
	* example-cdc/usb-cdc.c: Likewise.

	* chopstx.c (chopstx_mutex_init): Initialize OWNER, too.
	(preempt) [__ARM_ARCH_7M__]: Bug fix for register 0 to inhibit
	scheduling.
	(chx_sched) [__ARM_ARCH_6M__]: Return YIELD normally.
	(MAX_USEC_FOR_TIMER): Guarantee 24-bit tick.
	(chx_snooze): Revert the change of 2016-04-24 and modify
	chopstx_poll instead.
	(chopstx_poll): Support waiting forever.

2016-04-24  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_snooze): Wait forever when it's POLL and usec==0.

2016-04-22  Niibe Yutaka  <gniibe@fsij.org>

	* example-fs-bb48/first-pages.c: Rename from reset.c and merge
	crc32.c.